# tiktok-bot

./: .gitignore  Dockerfile  README.md  compose.yaml  example.settings.conf  liked_bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
atp/: __main__.py  alembic.ini  app.py  check_availability.py  crud.py  database.py  download.py  media.py  models.py  settings.py  telegram.py  tiktok.py  video_import.py
atp/migrations/: env.py
atp/migrations/versions/: 001_initial_migration.py  002_add_last_checked.py  003_add_video_type.py  004_add_author_column.py  005_add_source_column.py  006_remove_source_column.py  007_add_message_id_column.py  008_add_deleted_reason_column.py  009_remove_updated_at_column.py  010_add_liked_and_saved_columns.py
deploy/: deploy-tiktok-bot  nginx-tiktok-rich.conf  tiktok-liked-bot.service
scripts/: check_no_comments.py  check_repository.sh
tests/: conftest.py
tests/fixtures/settings_migrations/: settings.v1.conf  settings.v10.conf  settings.v11.conf  settings.v12.conf  settings.v2.conf  settings.v3.conf  settings.v4.conf  settings.v5.conf  settings.v6.conf  (+4 more)
tests/integration/: test_app.py  test_check_availability.py  test_crud.py  test_download.py  test_migrations.py  test_telegram.py  test_video_import.py
tests/unit/: test_check_availability_unit.py  test_download_unit.py  test_liked_bot_unit.py  test_main_entrypoint_unit.py  test_media.py  test_settings.py  test_telegram_unit.py  test_tiktok.py  test_video_import_unit.py
tiktok_bot/: __init__.py  __main__.py  application.py  config.py  domain.py
