[project]
name = "atp"
version = "1.8.3"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "ffmpeg-python>=0.2.0",
    "gallery-dl>=1.31.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.41",
    "yt-dlp[curl-cffi]>=2026.6.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (catches broad exceptions, etc.)
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]

[tool.ruff.lint.per-file-ignores]
"tiktok_bot/application.py" = ["E402", "I001"]
"atp/migrations/env.py" = ["E402", "F401", "I001"]
"tests/conftest.py" = ["E402"]
"tests/**/*.py" = ["ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "unit: fast isolated tests",
    "integration: tests with filesystem/db boundaries and mocked external APIs",
    "e2e_private: private end-to-end tests requiring real credentials/services",
]
